--- a/css/register.css
+++ b/css/register.css
@@ -5,22 +5,31 @@
 }
 
 .box {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .left {
-    background-color: #F4D35E;
-    flex-basis: 100%;
-    flex: 1;
+  background-color: #f4d35e;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.right {
+  flex: 1;
+}
+
+.left-content {
+  margin-top: 41%;
+  margin-bottom: 41%;
+  margin-left: 25%;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
-    width: 150%;
-}
-
-.sub {
-    color: white;
+  width: 60%;
+  margin-bottom: 15px;
 }
