--- a/css/register.css
+++ b/css/register.css
@@ -27,7 +27,7 @@ input:focus {
     outline: none;
 }
 
-#register {
+.cta {
     background-color: #62929E;
     color: white;
     font-size: 20px;
