--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
     margin-bottom: 20px;
 }
 
+.history {
+    color: white;
+}
+
 .flex {
     display: flex;
     flex-direction: column;
@@ -50,6 +54,10 @@ input:focus {
 
 label {
     margin-bottom: 3px;
+}
+
+.main {
+    color: black;
 }
 
 @media (min-width: 768px) {
