--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,32 @@ label {
     color: black;
 }
 
+#results {
+    padding-right: 0;
+}
+
+li {
+    list-style-type: none;
+    list-style: none;
+    padding: 0;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    border-bottom: 1px solid #EAEAEA;
+}
+
+li:last-child {
+    border-bottom: none;
+}
+
+li a  {
+    color: #62929E;
+}
+
+li a:hover {
+    text-decoration: none;
+    color: #4e757f;
+}
+
 @media (min-width: 768px) {
     .h-md-100 { height: 100vh; }
 }
