--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ li {
     list-style-type: none;
     list-style: none;
     padding-bottom: 20px;
-    padding-top: 20px;
+    padding-top: 18px;
     border-bottom: 1px solid #EAEAEA;
 }
 
@@ -91,11 +91,27 @@ li a:hover {
 
 li.transItems {
     color: white;
-    border-bottom: 1px solid #62929E;
+    border-bottom: 1px solid #EAEAEA;
+}
+
+.transItems {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 li.transItems:last-child {
     border-bottom: none;
+}
+
+a.transMore {
+    color: #E65F5C;
+    font-size: 1.5em;
+}
+
+a.transMore:hover {
+    color: #df3430;
 }
 
 @media (min-width: 768px) {
