--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 .history {
   color: white;
+  color: #62929e;
 }
 
 .flex {
@@ -106,15 +107,27 @@ li.transItems:last-child {
 }
 
 a.transMore {
-  color: #e65f5c;
+  color: white;
   font-size: 1.5em;
 }
 
+a.transLink {
+  color: white;
+}
+
+a.transLink:hover {
+    color: white;
+}
+
 a.transMore:hover {
+  color: white;
+}
+
+a.selected {
   color: #e65f5c;
 }
 
-li.selected {
+a.selected:hover {
   color: #e65f5c;
 }
 
@@ -131,6 +144,16 @@ li.selected {
   font-weight: bold;
   color: #62929e;
   border-bottom: none;
+}
+
+.return {
+  padding-right: 10px;
+  color: black;
+}
+
+.return:hover {
+  color: black;
+  text-decoration: none;
 }
 
 @media (min-width: 768px) {
