--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,22 @@ a.selected:hover {
   text-decoration: none;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+a.logout-btn {
+  color: #e65f5c;
+}
+
+a.logout-btn:hover {
+  color: #e65f5c;
+  text-decoration: none;
+}
+
 @media (min-width: 768px) {
   .h-md-100 {
     height: 100vh;
